--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,27 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <artifactId>algo.monads</artifactId>
   <version>0.1.1-SNAPSHOT</version>
-  <name>${artifactId}</name>
+  <name>${project.artifactId}</name>
+  <modelVersion>4.0.0</modelVersion>
+
+  <developers>
+    <developer>
+      <name>Konrad Hinsen</name>
+    </developer>
+    <developer>
+      <name>Roman Gonzalez</name>
+      <email>romanandreg@gmail.com</email>
+    </developer>
+  </developers>
 
   <parent>
     <groupId>org.clojure</groupId>
     <artifactId>pom.contrib</artifactId>
     <version>0.0.25</version>
   </parent>
-
-  <developers>
-    <developer>
-      <name>Konrad Hinsen</name>
-    </developer>
-  </developers>
 
   <dependencies>
     <dependency>
